fix: status icon/text spacing

--- a/webapp/channels/src/sass/layout/_headers.scss
+++ b/webapp/channels/src/sass/layout/_headers.scss
@@ -133,6 +133,10 @@
         .channel-header__pin {
             font-size: 14.4px;
         }
+
+        &#channelHeaderPinButton {
+            margin-left: 4px;
+        }
     }
 
     .flex-parent {
